# cheetah-game-realtime-server

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  template.toml
Common/: Cargo.toml
Common/src/: constants.rs  lib.rs
Common/src/collections/: event_collector.rs  event_collector_by_time.rs  mod.rs
Common/src/commands/: hash.rs  mod.rs
Common/src/network/: hash.rs  mod.rs  niobuffer.rs
Common/src/protocol/: mod.rs  relay.rs
Common/src/room/: access.rs  fields.rs  mod.rs  object.rs  owner.rs
Common/src/udp/: client.rs  mod.rs  server.rs
Common/src/utils/: logger.rs
Common/tests/: mod.rs
Common/tests/network/: mod.rs  niobuffer.rs
Common/tests/room/: access.rs  fields.rs  mod.rs
Common/tests/udp/: mod.rs  network.rs  protocol.rs  stub.rs
Common/tests/utils/: logger.rs
Common/tmp/: client.rs  server.rs
Server/: Cargo.toml
Server/make/: make-application.sh  make-docker-image.sh
Server/src/: lib.rs  main.rs  rooms.rs  server.rs
Server/src/network/: c2s.rs  client.rs  mod.rs  rooms.rs  s2c.rs  udp.rs
Server/src/rest/: mod.rs
Server/src/room/: clients.rs  cycle.rs  groups.rs  listener.rs  mod.rs  object.rs  request.rs  room.rs  thread.rs
Server/src/rooms/: mod.rs
Server/tests/: mod.rs
clients/Rust/: Cargo.toml  build.sh  cbindgen.toml
clients/Rust/make/: build-develop-unity-library.sh  build-production-unity-library.sh  develop.sh  production.sh
clients/Rust/src/: client.rs  clients.rs  controller.rs  lib.rs  registry.rs
clients/Rust/tests/: command.rs  connect.rs  mod.rs
components/relay/Common/: Cargo.toml
components/relay/Server/: Cargo.toml
hosting/Configurator/: Cargo.toml  Dockerfile  README.md  build-for-linux.sh  build-test-docker-image.sh
hosting/IntegrationTest/: Cargo.toml
hosting/IntegrationTest/src/: main.rs
modules/: .gitignore  Cargo.toml  Cranky.toml  Modules.sln  README.md  build-images-for-local-test.sh  generate-unity-grpc-meta.sh  generate-unity-grpc.sh  package-server-images.sh  rustfmt.toml
modules/Accounts/migrations/: 0002_cookie.sql
modules/Accounts/server/: Cargo.toml
modules/Platform/chart/: Chart.yaml
modules/UserStore/: Cargo.toml  build.rs
modules/UserStore/server/: Cargo.toml
modules/libraries/Microservice/: Cargo.toml
modules/matches/: README.md
modules/matches/Factory/: Cargo.toml  README.md
modules/matches/Realtime/: README.md
modules/matches/Registry/: README.md
modules/matches/StubMatchmaking/: Cargo.toml
modules/matches/StubRegistry/: Cargo.toml  README.md  build.rs
modules/platform/chart/: values.yaml
modules/statistics/Events/: Cargo.toml  README.md
modules/system/Compatibility/: README.md
rust/: .gitignore  Cargo.toml  README.md  build-libraries.sh  build-macos-clients.sh  rustfmt.toml
rust/Client/: Cargo.toml  build-debug-android-client.sh  build-debug-ios-client.sh  build-debug-macos-client.sh  build-debug-windows-client.sh
rust/Client/tests/: cmd_attach.rs  cmd_event.rs  cmd_field.rs  cmd_float.rs  cmd_items.rs  cmd_long.rs  cmd_member.rs  cmd_member_object.rs  cmd_reconnect.rs  cmd_server_time.rs  cmd_structure.rs  cmd_target_event.rs  connect.rs  delete_member.rs  delete_room.rs  emulation.rs  error.rs  stress.rs
rust/Common/: Cargo.toml
rust/Common/benches/: codec.rs  frame_codec.rs
rust/Common/src/: constants.rs  lib.rs  trace_collector.rs
rust/Common/tests/: frame_size.rs  protocol.rs
rust/Embedded/: Cargo.toml  build-debug-macos-client.sh
rust/Embedded/src/: lib.rs
rust/Macro/: Cargo.toml
rust/Macro/src/: enum_match_predicates.rs  lib.rs
rust/Microservice/: Cargo.toml
rust/Microservice/src/: lib.rs
rust/Plugin/: Cargo.toml  README.md  build.rs
rust/Plugin/src/: proto.rs
rust/Protocol/: Cargo.toml  README.md
rust/Protocol/src/: coniguration.rs  lib.rs  trace_collector.rs
rust/Protocol/tests/: large_packet.rs  protocol.rs  send.rs  stress.rs  unreliable.rs
rust/Registry/: Cargo.toml  Dockerfile  build.rs
rust/Registry/src/: lib.rs  proto.rs
rust/Server/: Cargo.toml  Dockerfile  build.rs
rust/Server/src/: builder.rs  env.rs  lib.rs
rust/adr/: 002-linkerd-mesh.md
rust/matches/: README.md
server/: Cargo.toml  README.md  build-all-images.sh  build-images.sh  images.yaml  package-server-images.sh  rustfmt.toml
server/Accounts/: Cargo.toml  Dockerfile  README.md  build.rs  results.xml
server/Accounts/migrations/: 0001_users.sql  0002_cookie.sql  0003_google.sql  0004_tokens.sql
server/Accounts/src/: grpc.rs  lib.rs  postgresql.rs  proto.rs  ydb.rs
server/Cerberus/: Cargo.toml
server/Cerberus/migrations/: 0001_create.sql
server/Cerberus/src/: lib.rs  proto.rs  server.rs
server/Microservice/: Cargo.toml  build.rs
server/Microservice/src/: lib.rs  loki.rs  prometheus.rs  proto.rs
server/UserStore/: Cargo.toml  Dockerfile  README.md
server/UserStore/migrations/: 0001_basic_types.sql  0001_primitive_types.sql  0002_set.sql
server/UserStore/src/: lib.rs
server/auth/: Dockerfile  README.md
server/auth/Authentication/: Dockerfile  README.md
server/auth/Cerberus/: Cargo.toml  Dockerfile  build.rs
server/auth/Cookie/: Cargo.toml  Dockerfile  build.rs
server/auth/Google/: Cargo.toml  Dockerfile  build.rs
server/auth/Service/: Cargo.toml  build.rs
server/auth/User/: Cargo.toml  Dockerfile  build.rs
server/auth/authentication/: Dockerfile  README.md
server/auth/cerberus/: Dockerfile
server/authentication/: Dockerfile  README.md
server/authentication/Chart/: Chart.yaml  values.yaml
server/authentication/Service/: Cargo.toml
server/cerberus/: Cargo.toml  Dockerfile  README.md
server/cerberus/Chart/: Chart.yaml  values.yaml
server/cerberus/Service/: Cargo.toml  build.rs
server/libraries/Microservice/: Cargo.toml
server/libraries/YDB/: Cargo.toml
server/liveops/ClientVersion/: Cargo.toml  Dockerfile  README.md  build.rs
server/match/: README.md
server/match/Relay/: Cargo.toml  Dockerfile
server/relay/: Dockerfile
server/scripts/: update-cargo-crates-cache.sh
server/src/: main.rs
server/src/test/: mod.rs
(+3230 files in other folders)
