[package]
name = "cheetah_relay_common"
version = "0.1.0"
authors = ["Kviring Aleksey <alex@kviring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
mio = { version = "0.7.0", features = ["os-poll", "tcp"]}
