[package]
name = "cheetah_relay_common"
version = "0.1.0"
authors = ["Kviring Aleksey <alex@kviring.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
mio = { version = "0.7.0", features = ["os-poll", "udp"] }
serde = { version = "1.0.116", features = ["derive"] }
rmp-serde = "0.14.4"
rand = "0.7.3"
snap = "1.0.1"
byteorder = "1.3.4"
chacha20poly1305 = "0.6.0"
lru = "0.6.0"
derivative = "2.1.1"
cheetah_relay_macro = { path = "../Macro/" }
generic-array = "0.14.4"

[dev-dependencies]
easybench = "1.0.0"
mockall = "0.8.0"