[package]
name = "cheetah_relay"
version = "0.1.0"
authors = ["kviring <alex@kviring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
log = "0.4"
stderrlog = "0.4"
indexmap = "1.3.2"
mio = { version = "0.7.0", features = ["os-poll", "tcp"]}

[dev-dependencies]