[workspace]
members = [
    "libraries/rust/Microservice",
    "matches/Registry/server",
    "matches/Realtime/server",
    "matches/Realtime/common/Common",
    "matches/Realtime/common/Macro",
    "matches/Realtime/client/rust/Realtime",
    "matches/Realtime/client/rust/Embedded",
    "matches/Realtime/client/rust/ServerPlugin",
]
