[workspace]
members = [
    "libraries/rust/Microservice",
    "matches/Registry/server",
    "matches/Realtime/server",
    "matches/Realtime/common/Common",
    "matches/Realtime/common/Macro",
    "matches/Realtime/client/Rust/Realtime",
    "matches/Realtime/client/Rust/Embedded",
    "matches/Realtime/client/Rust/ServerPlugin",
]
