[workspace]
resolver="2"
members = [
    "Client",
    "Common",
    "Embedded",
    "Server"
]

[workspace.package]
authors = ["kviring <alex@kviring.com>"]
edition = "2021"

[workspace.dependencies]
cheetah-game-realtime-protocol= "0.0.3"
log = "0.4.17"
serde = "1.0.157"
serde_json = "1.0.94"
tokio = "1.26.0"
tonic = "0.10.2"
tonic-health = "0.10.2"
tonic-build = "0.10.2"
tonic-web = "0.10.2"
prost = "0.12.3"
thiserror = "1.0.40"
futures = "0.3.27"
lazy_static = "1.4.0"
fnv = "1.0.7"
rand = { version = "0.8.5", features = ['min_const_gen'] }
tokio-stream = "0.1.12"
strum_macros = "0.25.2"
prometheus = "0.13.3"
prometheus-measures-exporter = "0.0.1"
heapless = "0.8.0"
anyhow = "1.0.70"
widestring = "1.0.2"
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
