[package]
name = "relay"
version = "0.1.0"
authors = ["kviring <alex@kviring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
bit-array = "0.4.4"
typenum = "1.11.2"
bytebuffer-rs = "0.3.1"
log = "0.4.8"
traitcast = "0.5.0"