[workspace]
members = [
    "libraries/Microservice",
    "Accounts",
    "matches/Factory",
    "matches/Registry",
    "matches/StubMatchmaking",
    "matches/StubRegistry",
    "matches/Relay/Macro",
    "matches/Relay/Common",
    "matches/Relay/Client",
    "matches/Relay/Server",
    "statistics/Events",
    "system/Compatibility"
]