[workspace]
members = [
    "libraries/Microservice",
    "Accounts",
    "matches/Factory",
    "matches/Registry",
    "matches/StubMatchmaking",
    "matches/StubRegistry",
    "matches/Relay/Macro",
    "matches/Relay/Common",
    "matches/Relay/Client",
    "matches/Relay/Server",
    "statistics/Events",
    "system/Compatibility",
    "libraries/YDB"
]

[patch.crates-io]
ydb = { git = "https://github.com/avkviring/ydb-rs-sdk.git"  }
#ydb = { path = '/Users/kviring/Documents/gitlab.dev.cheetah.games/cheetah/forks/ydb-rs-sdk/ydb' }
