[package]
name = "cheetah_relay_client"
version = "0.0.1"
authors = ["kviring <alex@kviring.com>"]
edition = "2018"

[lib]
name = "cheetah_relay_client"
crate-type = ["staticlib","cdylib", "lib"]

[dependencies]
lazy_static = "1.4.0"
intptr = "0.1"
log = "0.4"
cheetah_relay_common = { path = "../../Common"}
mio = { version = "0.7.0", features = ["os-poll", "tcp"]}
widestring="0.4.2"
hex = "0.4.2"

[dev-dependencies]
cheetah_relay = { path = "../../Server"}
log = "0.4"
stderrlog = "0.4"
easybench = "1.0.0"

