[package]
name = "cheetah-common"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[dependencies]
lazy_static.workspace = true
rand.workspace = true
snap = "1.1.0"
byteorder = "1.4.3"
chacha20poly1305 = { version = "0.10.1", features = ["heapless", "reduced-round"] }
cheetah-game-realtime-protocol.workspace=true
generic-array = "1.0.0"
heapless.workspace = true
fnv.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
log.workspace = true
tracing-core.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
num-derive = "0.4.0"
num-traits = "0.2.16"
serde = { version = "1.0.188", features = ["derive"] }
serde_arrays = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"
