[package]
name = "cheetah-macro"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.28"
quote = "1.0.33"
proc-macro2 = "1.0.67"
Inflector = "0.11.4"

[lib]
proc-macro = true
