[package]
name = "cheetah-plugin"
authors.workspace = true
edition.workspace = true
version = "0.0.1"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
lazy_static.workspace = true
tonic.workspace = true
prost.workspace = true
fnv.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
crossbeam = "0.8.2"
thiserror.workspace = true
anyhow.workspace = true


[dev-dependencies]
futures.workspace = true
async-stream = "0.3"
tower = "0.4.13"
tokio-stream.workspace = true
mockall = "0.11.3"


[build-dependencies]
tonic-build.workspace = true
protobuf-src.workspace = true
