 [package]
name = "cheetah-server"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[[bin]]
name = "cheetah-server"
path = "src/bin/service.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand.workspace = true
indexmap = { version = "2.1.0", features = ["serde"] }
cheetah-common = { path = "../Common" }
cheetah-game-realtime-protocol.workspace=true
fnv.workspace = true
heapless = { workspace = true, features = ["serde"] }
futures.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time", "fs", "macros", "net", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true
rymder = "0.8.0" # agones sdk
strum_macros.workspace = true
tonic-web.workspace = true
thiserror.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
prometheus-measures-exporter.workspace = true
num-derive = "0.4.0"
num-traits = "0.2.15"
tracing.workspace = true
tracing-core.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
warp = "0.3.5"
serde = { version = "1.0.188", features = ["derive", "std", "rc"] }
ron = "0.8.1"


[build-dependencies]
tonic-build.workspace = true
