[package]
name = "cheetah-accounts"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cheetah-accounts"
path = "src/bin/service.rs"


[dependencies]
base64 = "0.13.0"
chrono = "0.4"
tonic = "0.6.2"
tonic-health = "0.5.0"
prost = "0.9.0"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
async-stream = "0.3"
jsonwebtoken = "8.0.1"
serde = { version = "1.0.132", features = ["derive"] }
cheetah-microservice = { path = "../Microservice" }
redis = { version = "0.21.5", features = ["tokio-comp"] }
async-trait = "0.1.52"
testcontainers = { version = "0.12.0", optional = true }
lazy_static = "1.4.0"
tonic-web = "0.2.0"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "migrate", "ipnetwork", "chrono"] }
rand = "0.8"
tracing = "0.1.31"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
headers = "0.3.1"
rustls = { version = "0.20.2" }
thiserror = "1.0.30"
rsa = "0.5.0"
prometheus = "0.13.0"


[dev-dependencies]
testcontainers = "0.12.0"
lazy_static = "1.4.0"
futures = "0.3.21"
httpmock = { version = "0.6.2" }
base64 = { version = "0.13.0" }

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["rustfmt"] }
