[package]
name = "cheetah-cerberus"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "cheetah-auth-user"
path = "src/bin/service.rs"


[dependencies]
base64 = "0.13.0"
chrono = "0.4"
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
async-stream = "0.3"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.132", features = ["derive"] }
cheetah-microservice = { path = "../Microservice" }
redis = { version = "0.21.5", features = ["tokio-comp"] }
async-trait = "0.1.52"
log = "0.4"
pretty_env_logger = "0.4.0"
testcontainers = { version = "0.12.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
tonic-web = "0.2.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "migrate", "ipnetwork", "chrono"] }



[dev-dependencies]
testcontainers = "0.12.0"
lazy_static = "1.4.0"
futures = "0.3.19"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["rustfmt"] }
