[package]
name = "cheetah-microservice"
version = "999.999.999"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.6.1"


[build-dependencies]
tonic-build = {version="0.6.0", features=["rustfmt"]}
