[package]
name = "cheetah-microservice"
version = "999.999.999"
edition = "2021"

[dependencies]
log = "0.4"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.17.0"
tonic = "0.6.2"
tracing = { version = "0.1.31" }
tracing-log = { version = "0.1.2" }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-appender = "0.2.0"
tracing-bunyan-formatter = "0.3.2"
tracing-unwrap = { version = "0.9.2", default-features = false }
reqwest = { version = "0.11.9", features = ["json", "rustls", "blocking"], default-features = false }
prometheus = "0.13.0"
hyper="0.14.18"

[dev-dependencies]
httpmock = "0.6.6"
