[package]
name = "cheetah-userstore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cheetah-user-store"
path = "src/bin/service.rs"

[dependencies]
tonic = "0.6.2"
tonic-health = "0.5.0"
tonic-web = "0.2.0"
prost = "0.9.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ydb = "0.2.0"
cheetah-libraries-microservice = { path = "../libraries/Microservice" }
cheetah-libraries-ydb = { path = "../libraries/YDB" }
uuid = "1.0.0"

[build-dependencies]
tonic-build = "0.6.2"
