[package]
name = "cheetah-userstore"
version = "999.999.999"
edition = "2021"

[[bin]]
name = "cheetah-user-store"
path = "src/bin/service.rs"

[dependencies]
tonic = "0.6.2"
tonic-health = "0.5.0"
tonic-web = "0.2.0"
prost = "0.9.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ydb = "0.2.0"
cheetah-libraries-microservice = { path = "../libraries/Microservice" }
cheetah-libraries-ydb = { path = "../libraries/YDB" }
uuid = "1.0.0"
include_dir = "0.7.2"

[dev-dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
cheetah-libraries-ydb = { path = "../libraries/YDB", features = ["test_container"] }
serial_test = "0.8.0"

[build-dependencies]
tonic-build = "0.6.2"
