[package]
name = "cheetah_relay_common"
version = "0.1.0"
authors = ["Kviring Aleksey <alex@kviring.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.124", features = ["derive", "rc"] }
rmp-serde = "0.15.0"
rand = "0.8.3"
snap = "1.0.4"
byteorder = "1.4.3"
chacha20poly1305 = { version = "0.7.1", features = ["heapless"] }
derivative = "2.1.1"
cheetah_relay_macro = { path = "../Macro/" }
generic-array = "0.14.4"
heapless = { version = "0.5.6", features = ["serde"] }
fnv = "1.0.7"

[dev-dependencies]
mockall = "0.9.1"