[package]
name = "cheetah_relay"
version = "0.1.0"
authors = ["kviring <alex@kviring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
log = "0.4"
stderrlog = "0.5.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
cheetah_relay_common = { path = "../Common/" }
fnv = "1.0.7"
serde = { version = "1.0.116", features = ["derive", "rc"] }
heapless = { version = "0.5.6", features = ["serde"] }
actix-web = "3"
futures = "0.3.8"
actix-rt = "1.1.1"
rmpv = { version = "0.4.5", features = ["with-serde"] }
serde_json = "1.0.59"
rmp-serde = "0.15.0"
serde_yaml = "0.8.17"
clap = "3.0.0-beta.2"