[package]
name = "cheetah-libraries-microservice"
version = "999.999.999"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.17.0"
tonic = "0.6.2"
tracing = { version = "0.1.31" }
tracing-log = { version = "0.1.2" }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
reqwest = { version = "0.11.9", features = ["json", "rustls", "blocking"], default-features = false }
prometheus-measures-exporter = "0.0.1"
hyper = "0.14.18"
heapless = "0.7.10"
lazy_static = "1.4.0"
tracing-loki-layer = "0.1.0"


