[package]
name = "cheetah-auth-cerberus"
version = "999.999.999"
edition = "2018"

[[bin]]
name = "cheetah-auth-cerberus"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
chrono = "0.4"
tonic = "0.5.0"
prost = "0.8.0"
tokio = { version = "1.8.2", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
async-stream = "0.3"
futures = "0.3.16"
tower = { version = "0.4" }
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
cheetah-microservice = { path = "../../Microservice" }
redis = { version = "0.21.0", features = ["tokio-comp"] }
async-trait = "0.1.50"
log = "0.4"
pretty_env_logger = "0.4.0"
testcontainers = { version = "0.12.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }



[dev-dependencies]
testcontainers = "0.12.0"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = {version="0.5.1", features=["rustfmt"]}

[features]
test-helper = ["testcontainers", "lazy_static"]