[package]
name = "cheetah-auth-cerberus"
version = "999.999.999"
edition = "2018"

[[bin]]
name = "cheetah-auth-cerberus"
path = "src/main.rs"

[[test]]
name="server"
path = "tests/server.rs"
required-features = ["test-helper"]

[[test]]
name="resfresh_token"
path = "tests/resfresh_token.rs"
required-features = ["test-helper"]

[[test]]
name="session_token"
path = "tests/session_token.rs"
required-features = ["test-helper"]



[dependencies]
base64 = "0.13.0"
chrono = "0.4"
tonic = "0.6.1"
prost = "0.9.0"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
async-stream = "0.3"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.132", features = ["derive"] }
cheetah-microservice = { path = "../../Microservice" }
redis = { version = "0.21.4", features = ["tokio-comp"] }
async-trait = "0.1.50"
log = "0.4"
pretty_env_logger = "0.4.0"
testcontainers = { version = "0.12.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
tonic-web = "0.2.0"



[dev-dependencies]
testcontainers = "0.12.0"
lazy_static = "1.4.0"
futures = "0.3.16"

[build-dependencies]
tonic-build = {version="0.6.0", features=["rustfmt"]}

[features]
test-helper = ["testcontainers", "lazy_static"]