[package]
name = "cheetah-auth-cookie"
version = "0.1.0"
edition = "2018"

[dependencies]
cheetah-microservice = { path = "../../Microservice", features = ["auth"] }

tokio = { version = "1.7", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "migrate", "ipnetwork", "chrono"] }
log = "0.4"
rand = "0.8"

# обход проблемы https://github.com/Alexhuszagh/rust-lexical/issues/65
# это зависимость sqlx, как только они включат новую зависимость lexical-core
# то эту строчку надо удалить
lexical-core = "0.7.6"

[dev-dependencies]
testcontainers = "0.12.0"
lazy_static = "1.4.0"
cheetah-auth-cerberus = { path = "../Cerberus/Service", features = ["test-helper"] }
cheetah-auth-user = { path = "../User" }
jsonwebtoken-google = { version = "0.1.1", features = ["test-helper"] }
