[package]
name = "cheetah-auth-google"
version = "0.0.0"
edition = "2018"

[dependencies]
cheetah-microservice = { path = "../../Microservice", features = ["auth"] }

chrono = "0.4"
tokio = { version = "1.7", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "migrate", "ipnetwork", "chrono"] }
async-trait = "0.1.50"
log = "0.4"
rand = "0.8"
jsonwebtoken-google = { version = "0.1.1" }

# обход проблемы https://github.com/Alexhuszagh/rust-lexical/issues/65
# это зависимость sqlx, как только они включат новую зависимость lexical-core
# то эту строчку надо удалить
lexical-core = "0.7.6"

[dev-dependencies]
testcontainers = "0.12.0"
lazy_static = "1.4.0"
cheetah-auth-cerberus = { path = "../Cerberus/Service", features = ["test-helper"] }
cheetah-auth-user = { path = "../User" }
cheetah-auth-cookie = { path = "../Cookie" }
jsonwebtoken-google = { version = "0.1.1", features = ["test-helper"] }

[build-dependencies]
tonic-build = "0.4.2"