[package]
name = "cheetah-auth-google"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "cheetah-auth-google"
path = "src/bin/service.rs"

[dependencies]
cheetah-microservice = { path = "../../Microservice" }
chrono = "0.4"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
serde = { version = "1.0.132", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "migrate", "ipnetwork", "chrono"] }
async-trait = "0.1.50"
log = "0.4"
rand = "0.8"
jsonwebtoken-google = { version = "0.1.1" }
tonic = "0.6.2"
prost = "0.9.0"
tonic-web = "0.2.0"


[dev-dependencies]
cheetah-auth-cerberus = { path = "../Cerberus/", features = ["test-helper"] }
cheetah-auth-user = { path = "../User" }

testcontainers = "0.12.0"
lazy_static = "1.4.0"
jsonwebtoken-google = { version = "0.1.1", features = ["test-helper"] }

[build-dependencies]
tonic-build = "0.6.2"