[package]
name = "cheetah-auth-user"
version = "0.0.0"
edition = "2018"

[dependencies]
tonic = "0.4.3"
prost = "0.7"
tokio = { version = "1.7", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "migrate", "ipnetwork", "chrono"] }
log = "0.4"
cheetah-microservice = { path = "../../Microservice" }

# обход проблемы https://github.com/Alexhuszagh/rust-lexical/issues/65
# это зависимость sqlx, как только они включат новую зависимость lexical-core
# то эту строчку надо удалить
lexical-core = "0.7.6"

[dev-dependencies]
testcontainers = "0.12.0"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.4.2"