[package]
name = "cheetah-libraries-ydb"
version = "999.999.999"
edition = "2021"

[dependencies]
ydb = { version = "0.1.1", default-features = false, features = ["rustls"] }
testcontainers = "0.13.0"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
lazy_static = { version = "1.4.0", optional = true }

[features]
test_container = ["lazy_static"]


[dev-dependencies]
log = "0.4"
simple_logger = "2.1.0"
tracing = { version = "0.1.31" }
tracing-log = { version = "0.1.2" }
cheetah-libraries-ydb = { path = ".", features = ["test_container"] }

