[package]
name = "cheetah-liveops-client-version"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cheetah-liveops-client-version"
path = "src/bin/service.rs"

[dependencies]
cheetah-microservice = { path = "../../Microservice" }
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.17.0"
tonic = "0.6.2"
tonic-health = "0.5.0"
prost = "0.9.0"
async-trait = "0.1.52"
tonic-web = "0.2.0"
tracing = "0.1.31"
chrono = "0.4.19"
serde_yaml = "0.8.24"


[build-dependencies]
tonic-build = { version = "0.6.2", features = ["rustfmt"] }

