[package]
name = "cheetah-matches-factory"
version = "999.999.999"
edition = "2018"

[[bin]]
name = "cheetah-matches-factory"
path = "src/bin/service.rs"

[lib]
doctest = false

[dependencies]
tokio = { version = "1.10.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tonic = "0.5.2"
prost = "0.8.0"
cheetah-microservice = { path = "../../Microservice/" }
serde = { version = "1.0.127", features = ["derive", "rc"] }
serde_yaml = "0.8.17"
rmp-serde = "0.15.5"
rmpv = { version = "0.4.7", features = ["with-serde"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
futures = "0.3.16"

[dev-dependencies]
tempfile = "3.2.0"
include_dir = "0.6.2"

[build-dependencies]
tonic-build = "0.5.2"
